--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ install(FILES src/__init__.py DESTINATION ${install_dir})
 # install additional python files/demos/examples
 install(FILES demos/exploremesh.py DESTINATION ${install_dir}/demos)
 
-# generate stub files for autocomplete in IDEs
-# this must be done at the very end (such that the stubgen generation happens after the python modules are installed)
+# generate stub files for autocomplete in IDEs - this must be done at
+# the very end so that the stubgen generation happens after the python
+# modules are installed
 ngsolve_generate_stub_files(${addon_name})
